--- a/public/css/estiloAreaEmpresa.css
+++ b/public/css/estiloAreaEmpresa.css
@@ -1,5 +1,32 @@
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+
+.logo {
+    font-family: 'Varela Round', sans-serif;
+    font-weight: bold;
+    font-size: 46px;
+    color: #FFFFFF;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    display: inline-block;;
+    padding: 15px;
+}
+
+.user {
+    font-size: 14px;
+    background-color: #F7F5F5;
+    border-radius: 5px;
+    height: 30px;
+    line-height: 30px;
+    padding: 2px 5px;
+    text-align: center;
+    color: #03BBDB;
+    font-weight: bold;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.6);
+    display: inline-block;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
 }
 
 html {
@@ -33,7 +60,7 @@ nav>div>div>a{
 }
 
 nav>div>div>a:hover{
-    color: #ffc107;
+    color: #03BBDB;
     font-weight: bold;
 } 
 
@@ -67,12 +94,14 @@ header{
     font-weight: bold;
 }
 
+
 .estadocidade {
     font-size: 16px;
     border: 1px solid #3c3f44;
     width: 300px;
     height: 31px;
     margin-top: 15px;
+    margin-bottom: 10px;
 }
 
 .funcao {
@@ -138,7 +167,7 @@ header{
 }
 
 .candidato a{
-    color: #ffc107;
+    color: #802A73;
     margin-left: 55px;
     font-size: 18px;
     font-weight: bold;
