Atualizando o migration candidatos e o curriculoController

--- a/resources/views/includes/comboBoxMesAno.html
+++ b/resources/views/includes/comboBoxMesAno.html
@@ -21,7 +21,7 @@
 
 <label for="mes">Mês</label>
     <div class="mes">
-        <select class="meses">
+        <select class="meses" name="month">
            <option>01</option>
            <option>02</option>
            <option>03</option>
@@ -39,7 +39,7 @@
 
 <label for="ano">Ano</label>
      <div class="ano">
-        <select class="anos">
+        <select class="anos" name="year">
            <option>1990</option>
            <option>1991</option>
            <option>1992</option>
