--- a/public/css/curriculo.css
+++ b/public/css/curriculo.css
@@ -48,7 +48,6 @@ option {
 
 /* header */
 header {
-    width: 100%;
     height: 80px;
     background: #343A40;
     font-family: 'Montserrat', sans-serif;
@@ -56,13 +55,8 @@ header {
 
 .principal {
     color: 1px solid #FFF;
-    width: 100%;
     margin: 0 auto;
     line-height: 50px;
-}
-
-.principal img {
-    background-color: white;
 }
 
 .logo {
@@ -71,7 +65,7 @@ header {
     font-size: 36px;
     color: #FFFFFF;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-    display: inline-block;
+    
 }
 
 .logo a{
@@ -107,6 +101,26 @@ nav ul li a:hover {
     text-decoration: none;
 }
 
+.logout li{
+    font-size: 14px;
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.logout li a {
+    color: #03BBDB; 
+    padding: 5px; 
+}
+
+.logout li a:hover{
+    color: #FFF;
+    background-color: #03BBDB;
+    padding: 7px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    text-decoration: none;
+}
+
 .user {
     font-size: 16px;
     background-color: #F7F5F5;
@@ -118,24 +132,8 @@ nav ul li a:hover {
     text-align: center;
     color: #03BBDB;
     font-weight: bold;
-    box-sizing: border-box;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-    display: inline-block;
-    margin-left: 60px;
-    
 }
-
-header img {
-    border: 1px solid #FFF;
-    width: 50px;
-    height: 50px;
-    margin-left: 10px;
-    background-color: #FFF;
-    border-radius: 100%;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
-}
-
-
 
 /* Dados Pessoais */
 .fundo {
@@ -143,7 +141,6 @@ header img {
     background-size: cover;
     height: 180px;
     margin-top: 50px;
-    
 }
 
 .foto img{
@@ -161,7 +158,6 @@ header img {
 .editar-foto {
     padding-left: 170px;
     font-size: small;
-    
 }
 
 .editar-foto > input {
@@ -217,18 +213,32 @@ footer {
 }
 
 .escolha{
-    padding-top: 150px;
+    padding-top: 100px;
 }
 
-.escolha > h1{
+.escolha > p{
     color: black;
     font-family: fantasy;
+    font-size: 50px;
 
 }
 
 .caminhoCurriculo{
     padding-top: 130px;
-    padding-bottom: 300px;
+    padding-bottom: 200px;
+}
+
+.linkCurriculo > a{
+    color: black;
+    font-size: 20px;
+    background-color: rgb(206, 205, 205);
+    border-radius: 10px;
+}
+
+.linkCurriculo > a:hover{
+    color: white;
+    background-color: rgb(51, 50, 50);
+    border-radius: 10px;
 }
 
 .vagas{
@@ -236,6 +246,4 @@ footer {
     background-color: black;
     padding-bottom: 3px;
     border-radius: 5px;
-    
-  
 }
