--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 * {
     margin: 0;
     padding: 0;
@@ -7,21 +5,68 @@
     text-decoration: none;
 }
 
-#cabecalho {
+body {
+    background-color:#f6f7f9;
+
+}
+
+.dados-pessoais, .endereco, .contato, .objetivo-profissional, .formacao-academica {
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 4px 10px 0 rgba(0, 0, 0, 0.19);
+    background-color: white;
+}
+
+h3, h4, h5 {
+    color: black;
+}
+
+.cancelar, .salvar {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+/* Para todos */
+label{
+    color: black;
+}
+
+select {
+    width: 40%;
+    height: 30px;
+    border-radius: 5px;
+    padding-right: 2px;
+    color: black;
+}
+
+input {
+    height: 35px;   
+}
+
+option {
+    color: black;
+}
+
+
+/* header */
+header {
     width: 100%;
-    height: 90px;
+    height: 80px;
     background: #343A40;
     font-family: 'Montserrat', sans-serif;
 }
 
-#cabecalho-central {
+.principal {
     color: 1px solid #FFF;
-    margin: 0 5%;
-    line-height: 80px;
+    width: 100%;
+    margin: 0 auto;
+    line-height: 50px;
+}
+
+.principal img {
+    background-color: white;
 }
 
 .logo {
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 36px;
     color: #FFFFFF;
@@ -29,305 +74,173 @@
     display: inline-block;
 }
 
+.logo a{
+    text-decoration: none;
+    color: white;
+    
+}
+
 nav {
-    height: 50px;
-    line-height: 50px;
-    margin-left: 100px;
-    margin-right: 150px;
+    margin: auto 120px;
     display: inline-block;
 }
 
 nav ul li {
     font-size: 14px;
+    margin-right: 10px;
     font-weight: bold;
     display: inline-block;
-    margin: 0 5px 0 5px;
+  
 }
 
 nav ul li a {
-    color: #03BBDB;
+    color: #03BBDB; 
     padding: 5px;
 }
 
 nav ul li a:hover {
     color: #FFF;
     background-color: #03BBDB;
-    padding: 5px;
+    padding: 7px;
     border-radius: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-    transition: background-color 1s;
+    text-decoration: none;
+}
+
+.logout li{
+    font-size: 14px;
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.logout li a {
+    color: #03BBDB; 
+    padding: 5px; 
+}
+
+.logout li a:hover{
+    color: #FFF;
+    background-color: #03BBDB;
+    padding: 7px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    text-decoration: none;
 }
 
 .user {
-    font-size: 14px;
+    font-size: 16px;
     background-color: #F7F5F5;
-    border-radius: 5px;
+    border-radius: 10px;
     height: 30px;
     line-height: 30px;
-    padding: 2px 5px;
     text-align: center;
     color: #03BBDB;
     font-weight: bold;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.6);
+    box-sizing: border-box;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     display: inline-block;
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
+    margin-left: 60px;
+    
 }
 
 header img {
     border: 1px solid #FFF;
     width: 50px;
     height: 50px;
-    margin: 0 0 0 10px;
+    margin-left: 10px;
     background-color: #FFF;
     border-radius: 100%;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
 }
 
-.column-left {
-    /* border: 1px solid #000; */
-    width: 1200px;
-    height: 100px;
-    margin-left: 5%;
-    margin-top: 30px;
-    font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
-    display: inline-block;
+
+
+/* Dados Pessoais */
+.fundo {
+    background-image: url("/assets/img/quebracabeca.jpg");
+    background-size: cover;
+    height: 180px;
+    margin-top: 50px;
+    
 }
 
-.profile {
-    border: 1px solid #F0F0F0;
-    width: 500px;
-    height: 100px;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
-    float: left;
-}
-
-.profile .addPhoto {
-    background-color: #F0F0F0;
-    float: left;
-    height: 80px;
-    width: 120px;
-    margin-top: 10px;
-    margin-left: 10px;
-    color: black;
-    text-align: center;
-    line-height: 80px;
-    margin-right: 30px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-}
-
-.profile .addPhoto .changePhoto span {
+.foto img{
+    width: 170px;
+    height: 160px;
+    border-radius: 100%;
+    border: 3px solid #f1eeee;
+    object-fit: cover;
+    bottom: 45%;
+    margin-left: 20px;
     position: absolute;
-    width: 100%;
-    background-color: #007BAC;
-    color: #FFF;
-    font-size: 13px;
-    font-weight: bold;
+    z-index: 5;
+}  
+
+.editar-foto {
+    padding-left: 170px;
+    font-size: small;
+    
+}
+
+.editar-foto > input {
     color: black;
 }
 
-.profile .nameCandidate {
-    font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
-    font-size: 24px;
-    font-weight: bold;
-    color: #303030;
-    margin-top: 10px;
-}
 
-.profile .liCargo {
+.estadoCivil {
     color: black;
-    font-size: 12px;
-    margin-top: 5px;
 }
 
-.profile .linkCV {
-    color: black;
-    margin-top: 10px;
-    margin-left: 20px;
+.estadoCivil > label{
+    margin-left: 150px;
 }
 
-.profile .linkCV a {
-    font-size: 14px;
-    font-weight: bold;
-    color: #007BAC;
-}
-
-.profile .statusbargreen {
-    background-color: green;
-    width: 180px;
-    height: 10px;
-    float: left;
-    margin: 5px 5px 0 0;
-    border-radius: 5px;
-}
- 
-.profile .statusbargreen span{
-    float: left;
-    color: green;
-    width: 100px;
-    height: 10px;
-    line-height: 10px;
-    margin-left: 190px;
-}
-
-.buscar-vagas {
-    border: 1px solid #F0F0F0;
+.estadoCivil > select {
     width: 600px;
-    height: 100px;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
-    float: right;
 }
 
-.buscar-vagas h2 {
-    color: black;
-    font-weight: bold;
-    font-size: 24px;
-    margin-top: 10px;
-    margin-left: 20px;
+/* Contato */
+.redes-sociais img{
+    width: 25px;
 }
 
-.buscar-vagas input {
-    width: 300px;
-    margin-top: 10px;
-    margin-left: 20px;
-    font-size: 12px;
-    height: 30px;
-    font-family: 'Montserrat', sans-serif;
-    border-radius: 5px;
-    border: 1px solid #F0F0F0;
-    padding-left: 15px;
-    display: inline-block;
-    box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
-}
 
-.column-vagas {
-    /* border: 1px solid #000; */
-    width: 1200px;
-    height: 100px;
-    margin-left: 5%;
-    margin-top: 30px;
-    font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
-    display: inline-block;
-}
-
-.filtrar-vagas {
-    border: 1px solid #F0F0F0;
-    width: 250px;
-    height: 370px;
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
-    float: left;
-}
-
-.filtrar-vagas .palavra-chave {
-    color: black;
-    font-size: 18px;
-    font-weight: bold;
-    margin-left: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.filtrar-vagas-titulo {
-    background-color: #428BC1;
+/* Profissional */
+.areasInteresses > select {
     width: 100%;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
-    border-radius: 3px;
 }
 
-.vagas {
-    border: 1px solid #F0F0F0;
-    width: 900px;
-    height: 170px;
-    margin-bottom: 30px;
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
-    float: right;
-}
-
-.filtrar-vagas  .input-filtrar-vagas input{
-    width: 210px;
-    margin-top: 10px;
-    margin-left: 10px;
-    font-size: 12px;
-    height: 30px;
-    font-family: 'Montserrat', sans-serif;
-    border-radius: 5px;
-    border: 1px solid #F0F0F0;
-    padding-left: 15px;
-    display: inline-block;
-    box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
-}
-.vagas .titulo {
-    color: #007BAC;
-    font-size: 24px;
-    font-weight: bold;
-    margin-left: 30px;
-    margin-top: 15px;
-}
-
-.vagas .subtitulo {
-    color: black;
-    margin-left: 30px;
-    margin-top: 5px;
-}
-
-.vagas p {
-    color: black;
-    margin: 20px 50px 0px 30px;
-    font-size: 16px;
-    text-align: justify;
-}
-
-.vagas p a {
-    font-weight: bold;
-    color: #007BAC;
-}
-
-.rodape {
-    border: 1px solid #000;
-    width: 100%;
-    height: 100px;
-    margin-top: 300px;
-    font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
-    display: inline-block;
-}
-
-button {
-    background-color: #F0F0F0;
-    border: none;
-    font-size: 16px;
-    color: #000;
-    padding: 10px;
-    width: 80px;
-    text-align: center;
-    transition-duration: 0.4s;
-    text-decoration: none;
-    overflow: hidden;
-    margin: 10px 30% 10px 30%;
-    cursor: pointer;
-    font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
-    font-weight: bold;
-    border-radius: 5px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-}
-
-.filtrar-vagas .container {
-    color: black;
-    margin-left: 10px;
+.termino {
+    margin-left: 102px;
 }
 
 footer {
     width: 100%;
-    height: 90px;
-    padding-top: 20px;
-    background: #343A40;
+    padding: 20px;
     text-align: center;
+    background: #343A40;
     font-family: Montserrat;
     font-size: 12px;
     display: inline-block;
+    
+}
+
+.publiqueVaga {
+    padding-top: 160px;
+    margin-left: 30px;
+    color: white;
+
+}
+
+.h4 {
+    background-color: #6c195d;
+    display: inline;
+    padding: 10px;
+    border-radius: 5px;
+    color: #f1eeee;
+}
+
+.sobreAVaga {
+    margin-top: 10px;
+    margin-left: 10px;
 }
