Atualizado view area_empresa e perfilCandidato

--- a/public/css/estilomenu.css
+++ b/public/css/estilomenu.css
@@ -41,7 +41,7 @@ nav ul li:hover {
 }
 
 .nav-link {
-    color: #007bff!important;
+    color:  #03BBDB!important;
     padding: 20px!important;
     text-align: center;
 
