--- a/public/css/empresa.css
+++ b/public/css/empresa.css
@@ -111,27 +111,16 @@ nav ul li a:hover {
     font-size: 16px;
     background-color: #F7F5F5;
     border-radius: 10px;
-    height: 30px;
     line-height: 30px;
-    width: 120px;
     text-align: center;
     color: #03BBDB;
     font-weight: bold;
     box-sizing: border-box;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     display: inline-block;
-    margin-left: 60px;
+    padding: 1vh;
+    margin-left: 30vh;
     
-}
-
-header img {
-    border: 1px solid #FFF;
-    width: 50px;
-    height: 50px;
-    margin-left: 10px;
-    background-color: #FFF;
-    border-radius: 100%;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
 }
 
 
