Atualizado páginas de vagas do candidato

--- a/public/css/search.css
+++ b/public/css/search.css
@@ -244,3 +244,11 @@ footer {
     margin-top: 10px;
     margin-left: 10px;
 }
+
+
+/* Search - Area vagas para candidato */
+
+.favorito{
+    width: 25px;
+    height: 25px;
+}
