adicionando o nome da empresa

--- a/public/css/curriculo.css
+++ b/public/css/curriculo.css
@@ -267,7 +267,7 @@ footer {
 }
 
 
-.btn-danger{
+.botaoSair{
     padding-left: 90px!important;
     padding-right: 90px!important;
     margin-top: 30px!important;
