--- a/public/css/estiloAreaEmpresa.css
+++ b/public/css/estiloAreaEmpresa.css
@@ -85,8 +85,8 @@ main {
 }
 
 .candidato img{
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 230px;
     margin-left: 10px;
     margin-right: 10px;
     border-radius: 90px;
@@ -99,7 +99,7 @@ main {
     margin-left: 5px;
 }
 
-.candidato p{
+.dados{
     margin-bottom: 5px;
     margin-top: -2px;
     margin-left: 5px;
