--- a/public/css/empresa.css
+++ b/public/css/empresa.css
@@ -80,6 +80,10 @@ header {
     
 }
 
+.logo a:hover {
+    color: #03BBDB!important;
+}
+
 nav {
     margin: auto 120px;
     display: inline-block;
@@ -95,13 +99,13 @@ nav ul li {
 
 nav ul li a {
     color: #03BBDB; 
-    padding: 5px;
+    padding: 10px;
 }
 
 nav ul li a:hover {
     color: #FFF;
     background-color: #03BBDB;
-    padding: 7px;
+    padding: 10px;
     border-radius: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     text-decoration: none;
@@ -118,9 +122,23 @@ nav ul li a:hover {
     box-sizing: border-box;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     display: inline-block;
-    padding: 1vh;
+    padding: 7px;
     margin-left: 10vh;
     
+}
+
+.sair {
+    color: #e52411!important;
+    background-color: white;
+    padding: 5px 10px;
+    border-radius: 7px;
+}
+
+.sair:hover {
+    color: white!important;
+    background-color: #e52411;
+    padding: 5px 10px;
+    border-radius: 7px;
 }
 
 
@@ -214,3 +232,5 @@ footer {
     margin-top: 10px;
     margin-left: 10px;
 }
+
+
