--- a/public/css/estiloSobreNos.css
+++ b/public/css/estiloSobreNos.css
@@ -44,6 +44,23 @@
     color: white!important;
     background-color: #802A73!important;
 }
+
+.slogan {
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    display: flex;
+    flex-wrap: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.slogan p {
+    background-color: #802A73;
+    padding: 5px;
+    border-radius: 5px;
+
+}
    
 
 .sobrenos {
@@ -131,6 +148,8 @@ main .h3 {
     border: navy!important;
     width: 75%;
     border-radius: 50px!important;
+    padding: 5px!important;
+    margin-right: 10px!important;
 
 
  }
