--- a/public/css/estilomenu.css
+++ b/public/css/estilomenu.css
@@ -5,7 +5,7 @@
 }
 
  .logo {
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Montserrat', sans-serif; 
     font-weight: bold;
     font-size: 35px;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
