Atualizando view homeCandidato

--- a/public/css/curriculo.css
+++ b/public/css/curriculo.css
@@ -151,7 +151,7 @@ nav ul li a:hover {
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     display: inline-block;
     padding: 0 10px;
-    margin-left: 7vh;
+    /* margin-left: 7vh; */
 }
 
 
@@ -264,15 +264,16 @@ footer {
 }
 
 .linkCurriculo > a{
-    color: black;
+    color: white;
     font-size: 25px;
-    background-color: rgb(206, 205, 205);
+    background-color: rgb(180, 72, 0);
+    
     border-radius: 10px;
 }
 
 .linkCurriculo > a:hover{
-    color: white;
-    background-color: rgb(180, 72, 0);
+    color: black;
+    background-color: rgb(206, 205, 205);
     border-radius: 10px;
 }
 
